@@ -1,19 +1,19 @@
 package com.tobeto.pair9.services.concretes;
 
 import com.tobeto.pair9.core.utilities.mappers.ModelMapperService;
+import com.tobeto.pair9.core.utilities.results.*;
 import com.tobeto.pair9.entities.concretes.Invoice;
 import com.tobeto.pair9.repositories.InvoiceRepository;
 import com.tobeto.pair9.services.abstracts.InvoiceService;
-import com.tobeto.pair9.services.abstracts.RentalService;
 import com.tobeto.pair9.services.dtos.invoice.requests.AddInvoiceRequest;
 import com.tobeto.pair9.services.dtos.invoice.requests.UpdateInvoiceRequest;
 import com.tobeto.pair9.services.dtos.invoice.responses.GetListInvoiceResponse;
-import jakarta.persistence.criteria.CriteriaBuilder;
+
+import com.tobeto.pair9.services.rules.InvoiceBusinessRules;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -21,48 +21,45 @@ public class InvoiceManager implements InvoiceService {
 
     private final InvoiceRepository invoiceRepository;
     private final ModelMapperService modelMapperService;
-    private final RentalService rentalService;
+    private final InvoiceBusinessRules invoiceBusinessRules;
 
     @Override
-    public List<GetListInvoiceResponse> getAll() {
+    public BaseResponse<List<GetListInvoiceResponse>> getAll() {
         List<Invoice> invoices = invoiceRepository.findAll();
-        return invoices.stream()
+        var result = invoices.stream()
                 .map(invoice -> this.modelMapperService.forResponse()
-                        .map(invoice,GetListInvoiceResponse.class)).collect(Collectors.toList());
+                        .map(invoice,GetListInvoiceResponse.class)).toList();
+        return new BaseResponse<>(true,result);
     }
 
     @Override
-    public void add(AddInvoiceRequest request) {
-        entryCheck(request.getInvoiceNo(), request.getRentalId());
+    public BaseResponse add(AddInvoiceRequest request) {
+        invoiceBusinessRules.isExistInvoiceByNumber(request.getInvoiceNo());
+        invoiceBusinessRules.isExistRentalById(request.getRentalId());
         Invoice invoice = this.modelMapperService.forRequest().map(request, Invoice.class);
+        invoice.setId(null);
         this.invoiceRepository.save(invoice);
+        return new BaseResponse<>(true, Messages.invoiceAdded);
     }
 
     @Override
-    public void update(UpdateInvoiceRequest request) {
-        entryCheck(request.getInvoiceNo(),request.getRentalId());
+    public BaseResponse update(UpdateInvoiceRequest request) {
+        invoiceBusinessRules.isExistInvoiceById(request.getId());
+        invoiceBusinessRules.isExistRentalById(request.getRentalId());
         Invoice invoice = this.modelMapperService.forRequest()
                 .map(request,Invoice.class);
         this.invoiceRepository.save(invoice);
+        return new BaseResponse<>(true, Messages.invoiceUpdated);
     }
 
     @Override
-    public void delete(int id) {
+    public BaseResponse delete(Integer id) {
         this.invoiceRepository.deleteById(id);
+        return new BaseResponse<>(true, Messages.invoiceDeleted);
     }
 
     @Override
-    public boolean existsId(int id) {
+    public boolean isExistInvoiceById(Integer id) {
         return invoiceRepository.existsById(id);
-    }
-
-    @Override
-    public void entryCheck(String invoiceNo, int rentalId) {
-        if(invoiceRepository.existsInvoiceByInvoiceNo(invoiceNo)){
-            throw new RuntimeException("There cannot be two invoice with the same invoice number");
-        }
-        if(!rentalService.existsId(rentalId)){
-            throw new RuntimeException("There is no rental in the given id!");
-        }
     }
 }
